Prevent selecting elements on Firefox

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,7 @@
 :not(input) {
   -webkit-user-select: none;
   -webkit-user-drag: none;
+  -moz-user-select: -moz-none;
 }
 
 html {
